= Version descriptions

== 7.4.0

- Resolves: gh#274 add a start time offset
- Resolves: gh#298 release builds are now signed even outside F-Droid

== 7.3.5

- delete all sleep now confirms before erasing starts

== 7.3.4

- Add menu item to delete all sleeps (Ely M)
- Resolves: gh#285 main service: fix crash on Android 12

== 7.3.3

- Resolves: gh#277 sleep activity: allow multi-line notes

== 7.3.2

- Show timezone at sleep start/stop timestamps
- Runtime baseline is now API 24 (Android 7.0), still covering more than 80% of devices

== 7.3.1

- Resolves: gh#253 fixed sleep activity to allow sleep edits again (Mael Lacour)

== 7.3.0

- Resolves: gh#239 it is now possible to comment sleeps
- No longer using `android:onClick`, which is broken on older versions of Android

== 7.2.5

- Resolves: gh#208 add separators between sleep items in the main activity
- Resolves: gh#209 improved duplicate filtering in the calendar import/export (Jesper Lillqvist)

== 7.2.4

- Resolves: gh#207 avoid duplicate entries when importing from calendar multiple times

== 7.2.3

- Resolves: gh#150 avoid duplicate entries when exporting to calendar multiple times

== 7.2.2

- Resolves: gh#178 prevent negative sleep durations

== 7.2.1

- Resolves: gh#184 fixed overlapped and blocked texts on main page (yuhuitech)

== 7.2.0

- Resolves: gh#161 main activity: make the rating widget read-only

== 7.1.5

- Resolves: gh#157 hint that swiping the sleep will delete it
- Resolves: gh#162 avoid empty screen when scrolling down in the stats activity (usashiki)

== 7.1.4

- Resolves: gh#138 sleep edit / delete: handle automatic backup

== 7.1.3

- Resolves: gh#94 Add quick settings tile to start/stop tracking

== 7.1.2

- Awake-for and rating property of the sleep card is now hidden by default

== 7.1.1

- Resolves: gh#51 add a graphs menu item and activity to chart various stats over time (usashiki)
- Resolves: gh#92 add a widget to start/stop tracking with a single stap from the home screen